# runoff

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.workspace.ts
backend/: pyproject.toml
backend/evals/: eval_classify.py  eval_copilot.py  eval_golden.py  eval_parse.py
backend/runoff_api/: deps.py  main.py
backend/runoff_api/api/: blueprints.py  flags.py  goldens.py  memories.py  projects.py  runs.py  sources.py
backend/runoff_api/core/: bindings.py  db.py  dialect.py  diff.py  jsonutil.py  previous_run.py  reducer.py  warehouse.py  warehouse_catalog.py
backend/runoff_api/engine/: bind_golden.py  catalog_format.py  checks.py  classify.py  copilot.py  distill.py  draft.py  llm.py  run.py  (+8 more)
backend/tests/: conftest.py  fake_client.py  test_api_manifest.py  test_api_reads.py  test_api_writes.py  test_bind_golden.py  test_bindings.py  test_catalog_format.py  test_checks_engine.py  test_classify.py  test_copilot_context.py  test_copilot_sse.py  test_copilot_tools.py  test_copilot_turn.py  test_db.py  test_dialect.py  test_diff.py  test_distill.py  test_draft.py  test_events_sse.py  test_golden_binding.py  test_golden_pipeline.py  test_goldens_routes_r3.py  test_goldens_service.py  test_ids.py  test_ingest_parity.py  test_llm.py  test_parity_fixtures.py  test_parse_plan_engine.py  test_plan_propose_routes.py  test_previous_run.py  test_prompt_fixtures.py  test_prompts.py  test_propose_plan.py  test_reducer.py  test_resolve_sources.py  test_run_data_engine.py  test_run_engine.py  test_run_loop.py  test_scaffold_golden.py  (+16 more)
(+210 files in other folders)
