[project]
name = "runoff-api"
version = "0.1.0"
description = "Runoff backend (R1+): FastAPI port of the TS backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "openai>=2.48.0",
    "openpyxl>=3.1.5",
    "pypdf>=6.14.2",
    "mammoth>=1.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query() in argument defaults is the framework idiom, not a
# mutable-default bug (B008).
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
